--- a/circle.yml
+++ b/circle.yml
@@ -21,5 +21,5 @@ deployment:
     branch: master
     commands:
       - mkdir -p build
-      - elm-make src/Splitscreen.elm build/index.html
+      - elm-make src/Splitscreen.elm --output build/index.html
       - aws s3 sync build/index.html s3://splitscreen.lukewinikates.com
